[package]
name = "http_counter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
ic-certified-map = "0.3"
serde = "1"
